--- a/source/app/src/main/res/layout/fragment_search.xml
+++ b/source/app/src/main/res/layout/fragment_search.xml
@@ -19,7 +19,6 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -39,6 +38,7 @@
                 android:visibility="gone" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginTop="@dimen/_4sdp"
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -63,6 +63,7 @@
         <LinearLayout
             android:background="@android:color/transparent"
             android:layout_marginBottom="@dimen/_42sdp"
+            android:paddingVertical="@dimen/_4sdp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
@@ -73,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_3sdp"
+                app:fabCustomSize="@dimen/_34sdp"
                 android:layout_marginVertical="@dimen/_3sdp"
                 android:backgroundTint="@color/main_color"
                 android:onClick="@{(v)->f.onClick(v)}"
@@ -83,6 +85,7 @@
                 android:id="@+id/fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:fabCustomSize="@dimen/_34sdp"
                 android:layout_marginHorizontal="@dimen/_3sdp"
                 android:layout_marginVertical="@dimen/_3sdp"
                 android:backgroundTint="@color/main_color"
