--- a/source/app/src/main/res/layout/layout_reply_bar.xml
+++ b/source/app/src/main/res/layout/layout_reply_bar.xml
@@ -8,7 +8,7 @@
             type="androidx.databinding.ObservableField&lt;String>" />
         <variable
             name="listener"
-            type="com.bsq.aee.ui.main.search.SearchFragment" />
+            type="com.bsq.aee.ui.main.search.detail.PostDetailActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,7 +36,7 @@
                 android:src="@drawable/chat_icon" />
 
             <EditText
-                android:text="@={reply}"
+                android:layout_alignParentEnd="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -47,6 +47,7 @@
                 android:hint="Bình luận"
                 android:inputType="textAutoComplete"
                 android:maxLines="1"
+                android:text="@={reply}"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_8ssp" />
