--- a/source/app/src/main/res/layout/layout_search_bar.xml
+++ b/source/app/src/main/res/layout/layout_search_bar.xml
@@ -35,7 +35,6 @@
                 android:src="@drawable/search_icon" />
 
             <EditText
-                android:text="@={search}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -44,8 +43,10 @@
                 android:background="@null"
                 android:fontFamily="@font/opensans"
                 android:hint="Tìm kiếm bài viết"
+                android:layout_alignParentEnd="true"
                 android:inputType="textAutoComplete"
                 android:maxLines="1"
+                android:text="@={search}"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_8ssp" />
