add expand/collapse chat box add field detail activity

--- a/source/app/src/main/res/layout/activity_create_post.xml
+++ b/source/app/src/main/res/layout/activity_create_post.xml
@@ -55,10 +55,10 @@
             android:background="@null"
             android:paddingHorizontal="@dimen/_2sdp"
             android:id="@+id/content"
-            app:layout_constraintTop_toBottomOf="@id/avatar"
+            app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintStart_toStartOf="@id/avatar"
             app:layout_constraintBottom_toTopOf="@id/post_btn"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_24sdp"
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@color/black"
             android:layout_width="0dp"
@@ -77,9 +77,9 @@
             android:layout_marginTop="@dimen/_16sdp"
             android:elevation="0dp"
             android:fontFamily="@font/opensans"
-            android:paddingVertical="@dimen/_10sdp"
+            android:paddingVertical="@dimen/_8sdp"
             android:text="Đăng bài viết"
-            android:textSize="@dimen/_12ssp"
+            android:textSize="@dimen/_10ssp"
             android:onClick="@{(v)->a.onClick(v)}"
             android:textStyle="bold"
             app:backgroundTint="@color/main_color"
