--- a/source/app/src/main/res/layout/activity_university_details.xml
+++ b/source/app/src/main/res/layout/activity_university_details.xml
@@ -41,6 +41,7 @@
             android:text="@{vm.universityName}"
             android:layout_marginTop="@dimen/_6sdp"
             android:textSize="@dimen/_16ssp"
+            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="2"
@@ -58,9 +59,9 @@
             android:layout_width="0dp"
             android:text="@string/university_info"
             app:backgroundTint="@color/main_color"
-            android:textColor="@color/white"
+            android:textColor="@{!vm.page?@color/white:@color/main_color}"
             android:layout_height="wrap_content"
-            app:strokeColor="@color/white"
+            app:strokeColor="@{!vm.page?@color/white:@color/main_color}"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
         <com.google.android.material.button.MaterialButton
             app:cornerRadius="@dimen/_3sdp"
@@ -74,9 +75,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             android:text="@string/university_fields"
-            android:textColor="@color/main_color"
+            app:backgroundTint="@color/white"
+            android:textColor="@{vm.page?@color/white:@color/main_color}"
+            app:strokeColor="@{vm.page?@color/white:@color/main_color}"
             android:layout_height="wrap_content"
-            app:strokeColor="@color/main_color"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
 
         <FrameLayout
@@ -120,10 +122,10 @@
             </ScrollView>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rc"
+                android:layout_margin="@dimen/_8sdp"
                 android:visibility="@{!vm.page?View.GONE:View.VISIBLE}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-
         </FrameLayout>
 
 
