--- a/source/app/src/main/res/layout/activity_post_detail.xml
+++ b/source/app/src/main/res/layout/activity_post_detail.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginHorizontal="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_2sdp"
             android:layout_marginBottom="@dimen/_4sdp"
             android:background="@android:color/transparent"
             tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
