--- a/source/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/source/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/search"
         android:enabled="true"
-        android:icon="@drawable/search"
+        android:icon="@drawable/chat_icon"
         android:title="@string/search"/>
     <item
         android:id="@+id/favorite"
