--- a/source/app/src/main/res/xml/network_security_config.xml
+++ b/source/app/src/main/res/xml/network_security_config.xml
@@ -4,9 +4,9 @@
         <domain includeSubdomains="true">10.0.2.2</domain>
     </domain-config>
     <base-config cleartextTrafficPermitted="true">
-<!--        <trust-anchors>-->
-<!--            <certificates src="@raw/aee"/>-->
-<!--            <certificates src="system"/>-->
-<!--        </trust-anchors>-->
+        <trust-anchors>
+            <certificates src="@raw/aee"/>
+            <certificates src="system"/>
+        </trust-anchors>
     </base-config>
 </network-security-config>
