--- a/source/app/src/main/res/layout/fragment_university.xml
+++ b/source/app/src/main/res/layout/fragment_university.xml
@@ -46,12 +46,12 @@
                 tools:listitem="@layout/university_item" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:paddingStart="@dimen/_4sdp"
                 android:id="@+id/pagination_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginStart="@dimen/_2sdp"
                 android:layout_marginBottom="@dimen/_4sdp"
                 android:background="@android:color/transparent"
                 tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
