--- a/source/app/src/main/res/layout/activity_login.xml
+++ b/source/app/src/main/res/layout/activity_login.xml
@@ -155,7 +155,7 @@
                     </RelativeLayout>
 
                     <com.google.android.material.button.MaterialButton
-                        android:visibility="gone"
+                        android:visibility="visible"
                         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_48sdp"
